--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.1.3",
     "nodemon": "^3.0.3",
+    "redis": "^5.10.0",
     "stripe": "^18.3.0"
   }
 }
