--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "backend",
+ "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd ../frontend && npm install && npm run build" 
   },
   "author": "",
   "license": "ISC",
